freest/test/prog/Valid/SessionTypes/InPat/InPat.fst
module InPat where

foo : ?Int -> (Int, Skip)
foo (?n; s) = (n, s)