freest/test/prog/Invalid/Parsing/PrefixTupleExpCons/PrefixTupleExpCons.fst
module PrefixTupleExpCons where

foo : (Int, Int)
foo = (,) 0 0
